jwt token, reading certificates

--- a/FE/admin-fe/src/app/components/navigation-bar/navigation-bar.component.html
+++ b/FE/admin-fe/src/app/components/navigation-bar/navigation-bar.component.html
@@ -17,7 +17,7 @@
         </li>
 
         <li class="mt-5">
-          <a routerLink="/login"><span class="fa fa-sticky-note mr-3 mt-5"></span> Sign out</a>
+          <a (click)="logout()" ><span class="fa fa-sticky-note mr-3 mt-5"></span> Sign out</a>
         </li>
       </ul>
 
