--- a/FE/admin-fe/src/app/components/certificates/all-certificates/all-certificates.component.html
+++ b/FE/admin-fe/src/app/components/certificates/all-certificates/all-certificates.component.html
@@ -8,7 +8,7 @@
       <table class="table table-hover text-center">
         <thead>
         <tr>
-          <th scope="col">Serial Num.</th>
+          <th scope="col">Serial Num</th>
           <th scope="col">Subject</th>
           <th scope="col">Date issued</th>
           <th scope="col">Valid until</th>
@@ -17,28 +17,12 @@
         </tr>
         </thead>
         <tbody>
-        <tr>
-          <td>1</td>
-          <td>Mark</td>
-          <td>12.3.2021</td>
-          <td>12.3.2022</td>
-          <td><button mat-raised-button color="primary">Certificate</button></td>
-          <td><button mat-raised-button color="warn">Revoke</button></td>
-        </tr>
-        <tr>
-          <td>2</td>
-          <td>Mark</td>
-          <td>12.3.2021</td>
-          <td>12.3.2022</td>
-          <td><button mat-raised-button color="primary">Certificate</button></td>
-          <td><button mat-raised-button color="warn">Revoke</button></td>
-        </tr>
-        <tr>
-          <td>3</td>
-          <td>Mark</td>
-          <td>12.3.2021</td>
-          <td>12.3.2022</td>
-          <td><button mat-raised-button color="primary">Certificate</button></td>
+        <tr *ngFor=" let cert of certificates">
+          <td>{{cert.serialNum}}</td>
+          <td>{{cert.subject}}</td>
+          <td>{{cert.issuedDate}}</td>
+          <td>{{cert.validToDate }}</td>
+          <td><button mat-raised-button color="primary" (click)="openCertInfo(cert.serialNum)">Certificate</button></td>
           <td><button mat-raised-button color="warn">Revoke</button></td>
         </tr>
         </tbody>
