--- a/FE/hospital-app/src/app/components/navigation-bar/navigation-bar.component.html
+++ b/FE/hospital-app/src/app/components/navigation-bar/navigation-bar.component.html
@@ -4,14 +4,17 @@
       <img src="assets/images/medicine.png" class="logo ml-4 pt-2  mb-5" alt="Security" style="width: 150px; height: 130px;">
       <ul class="list-unstyled components mb-5">
         <li>
+          <mat-icon class="float-left mt-2">home</mat-icon>
           <a routerLink="/admin-panel"><span class="fa fa-home mr-3"></span> Home</a>
         </li>
         <li>
+          <mat-icon class="float-left mt-2">description</mat-icon>
           <a routerLink="/certificate"><span class="fa fa-user mr-3"></span> Certificate</a>
         </li>
 
-        <li class="mt-5">
-          <a (click)="logout()" ><span class="fa fa-sticky-note mr-3 mt-5"></span> Sign out</a>
+        <li class="mt-5" (click)="logout()" style="cursor:pointer;">
+          <mat-icon class="float-left mt-2">close</mat-icon>
+          <a ><span class="fa fa-sticky-note mr-3 mt-5"></span> Sign out</a>
         </li>
       </ul>
 
