--- a/FE/admin-fe/src/app/components/navigation-bar/navigation-bar.component.html
+++ b/FE/admin-fe/src/app/components/navigation-bar/navigation-bar.component.html
@@ -1,23 +1,52 @@
 
   <nav id="sidebar" class="h-100">
-    <div class="p-4">
-      <img src="assets/images/icon.png" class="logo ml-5 pl-4 mb-5" alt="Security">
+    <div class="pt-4 pl-4 pr-4">
+      <img src="assets/images/icon.png" class="logo ml-5 pl-4 mb-3" alt="Security">
       <ul class="list-unstyled components mb-5">
         <li>
+          <mat-icon class="float-left mt-2">home</mat-icon>
           <a routerLink="/admin-panel"><span class="fa fa-home mr-3"></span> Home</a>
         </li>
         <li>
-          <a routerLink="/pending-certificates"><span class="fa fa-user mr-3"></span> Certificates pending</a>
+          <mat-icon class="float-left mt-2">description</mat-icon>
+           <a><span class="fa fa-home mr-3"></span>Certificate</a>
         </li>
         <li>
-          <a routerLink="/all-certificates"><span class="fa fa-briefcase mr-3"></span> All certificates</a>
+          <a routerLink="/pending-certificates"><span class="fa fa-user mr-5"></span>Certificates pending</a>
         </li>
         <li>
-          <a routerLink="/revoke-certificate"><span class="fa fa-sticky-note mr-3"></span> Revoke certificate</a>
+          <a routerLink="/all-certificates"><span class="fa fa-briefcase mr-5"></span> All certificates</a>
+        </li>
+        <li>
+          <a routerLink="/revoke-certificate"><span class="fa fa-sticky-note mr-5"></span> Revoke certificate</a>
         </li>
 
-        <li class="mt-5">
-          <a (click)="logout()" ><span class="fa fa-sticky-note mr-3 mt-5"></span> Sign out</a>
+        <li>
+          <mat-icon class="float-left mt-2">person</mat-icon>
+          <a><span class="fa fa-home mr-3"></span>Users</a>
+        </li>
+        <li>
+          <a routerLink="/pending-certificates"><span class="fa fa-user mr-5"></span> All users</a>
+        </li>
+        <li>
+          <a routerLink="/all-certificates"><span class="fa fa-briefcase mr-5"></span> Add user</a>
+        </li>
+        <li>
+          <a routerLink="/revoke-certificate"><span class="fa fa-sticky-note mr-5"></span> Remove user</a>
+        </li>
+
+        <li>
+          <mat-icon class="float-left mt-2">ballot</mat-icon>
+          <a><span class="fa fa-home mr-3"></span>Logs</a>
+        </li>
+        <li>
+          <a routerLink="/pending-certificates"><span class="fa fa-user mr-5"></span> Sources</a>
+        </li>
+
+        <li class="mt-5" (click)="logout()" style="cursor: pointer;">
+<!--          <button (click)="logout()" class="btn btn-block btn-danger mt-3">Sign out</button>-->
+          <mat-icon class="float-left mt-2">close</mat-icon>
+          <a><span class="fa fa-sticky-note mr-3 mt-5"></span> Sign out</a>
         </li>
       </ul>
 
