listing and adding users

--- a/FE/admin-fe/src/app/components/navigation-bar/navigation-bar.component.html
+++ b/FE/admin-fe/src/app/components/navigation-bar/navigation-bar.component.html
@@ -26,10 +26,10 @@
           <a><span class="fa fa-home mr-3"></span>Users</a>
         </li>
         <li>
-          <a routerLink="/pending-certificates"><span class="fa fa-user mr-5"></span> All users</a>
+          <a routerLink="/users"><span class="fa fa-user mr-5"></span> All users</a>
         </li>
         <li>
-          <a routerLink="/all-certificates"><span class="fa fa-briefcase mr-5"></span> Add user</a>
+          <a routerLink="/add-user"><span class="fa fa-briefcase mr-5"></span> Add user</a>
         </li>
         <li>
           <a routerLink="/revoke-certificate"><span class="fa fa-sticky-note mr-5"></span> Remove user</a>
