--- a/FE/hospital-app/src/app/components/login/login.component.html
+++ b/FE/hospital-app/src/app/components/login/login.component.html
@@ -3,7 +3,8 @@
   <div class="workinghny-form-grid">
     <div class="wrapper">
       <div class="logo">
-        <h1><span>Pegasus Medical System</span></h1>
+        <h1><span>GSM Hospital</span></h1>
+        <h3>- Pegasus Medical System -</h3>
       </div>
       <div class="workinghny-block-grid">
         <div class="workinghny-left-img align-end">
