--- a/FE/admin-fe/src/app/components/certificates/pending-certificates/pending-certificates.component.html
+++ b/FE/admin-fe/src/app/components/certificates/pending-certificates/pending-certificates.component.html
@@ -5,7 +5,7 @@
   <div class="m-3 w-100">
     <h1 class="mb-4">Pending certificates</h1>
     <div>
-      <table class="table table-hover text-center" *ngIf="requests.length !== 0">
+      <table class="table table-hover text-center">
         <thead>
         <tr>
           <th scope="col">Subject</th>
@@ -14,20 +14,25 @@
           <th scope="col" colspan="2">Actions</th>
         </tr>
         </thead>
-        <tbody>
-        <tr *ngFor="let req of requests">
-          <td>{{req.subjectCN}}</td>
-          <td>{{req.subjectOU}}</td>
-          <td><button mat-raised-button color="primary" (click)="openSubjectsInfo(req)">Subject's info</button></td>
-          <td colspan="2">
-            <button (click)="accept(req)" mat-raised-button color="primary" class="mr-2">Accept</button>
-            <button (click)="deny(req.id)" mat-raised-button color="warn">Deny</button>
-          </td>
-        </tr>
-
+        <tbody *ngIf="requests.length !== 0">
+          <tr *ngFor="let req of requests">
+            <td>{{req.subjectCN}}</td>
+            <td>{{req.subjectOU}}</td>
+            <td><button mat-raised-button color="primary" (click)="openSubjectsInfo(req)">Subject's info</button></td>
+            <td colspan="2">
+              <button (click)="accept(req)" mat-raised-button color="primary" class="mr-2">Accept</button>
+              <button (click)="deny(req.id)" mat-raised-button color="warn">Deny</button>
+            </td>
+          </tr>
+        </tbody>
+        <tbody *ngIf="requests.length === 0">
+          <tr>
+            <td colspan="5" class="text-center pt-3" style="background-color: lightgreen; color: darkgreen">
+              <h4>No requests! All your hospital applications are secured!</h4>
+            </td>
+          </tr>
         </tbody>
       </table>
-      <h3 *ngIf="requests.length === 0" >There are no pending certificate requests to show.</h3>
     </div>
   </div>
 </div>
