--- a/FE/hospital-app/src/app/components/navigation-bar/navigation-bar.component.html
+++ b/FE/hospital-app/src/app/components/navigation-bar/navigation-bar.component.html
@@ -11,7 +11,10 @@
           <mat-icon class="float-left mt-2">description</mat-icon>
           <a routerLink="/certificate"><span class="fa fa-user mr-3"></span> Certificate</a>
         </li>
-
+        <li>
+          <mat-icon class="float-left mt-2"> local_hospital</mat-icon>
+          <a routerLink="/patient"><span class="fa fa-user mr-3"></span> Patients</a>
+        </li>
         <li class="mt-5" (click)="logout()" style="cursor:pointer;">
           <mat-icon class="float-left mt-2">close</mat-icon>
           <a ><span class="fa fa-sticky-note mr-3 mt-5"></span> Sign out</a>
