--- a/FE/hospital-app/src/app/components/admin-panel/admin-panel.component.html
+++ b/FE/hospital-app/src/app/components/admin-panel/admin-panel.component.html
@@ -10,8 +10,8 @@
     <div class="pl-3">
       <h1>Home panel</h1>
     </div>
-    <div>
-        {{messages}}
+      <div *ngFor="let m of messages">
+        {{m}}
     </div>
   </div>
 </div>
