Logs View, Logs Filter

--- a/FE/admin-fe/src/app/components/navigation-bar/navigation-bar.component.html
+++ b/FE/admin-fe/src/app/components/navigation-bar/navigation-bar.component.html
@@ -37,7 +37,7 @@
           <a><span class="fa fa-home mr-3"></span>Logs</a>
         </li>
         <li>
-          <a routerLink="/pending-certificates"><span class="fa fa-user mr-5"></span> Sources</a>
+          <a routerLink="/logs"><span class="fa fa-user mr-5"></span> All logs</a>
         </li>
 
         <li>
