regex patterns for validation

--- a/FE/hospital-app/src/app/components/patients/patientDetails/patient-details/patient-details.component.html
+++ b/FE/hospital-app/src/app/components/patients/patientDetails/patient-details/patient-details.component.html
@@ -14,6 +14,10 @@
       <td>{{patient.name}}</td>
     </tr>
     <tr>
+      <td><b>Gender</b></td>
+      <td>{{patient.gender}}</td>
+    </tr>
+    <tr>
       <td><b>Current age</b></td>
       <td>{{patient.currentAge}} years</td>
     </tr>
