--- a/FE/hospital-app/src/app/components/patients/patients/patients.component.html
+++ b/FE/hospital-app/src/app/components/patients/patients/patients.component.html
@@ -10,6 +10,7 @@
         <tr>
           <th scope="col">Patient's Id</th>
           <th scope="col">Name</th>
+          <th scope="col">Gender</th>
           <th scope="col">Age</th>
           <th scope="col"></th>
         </tr>
@@ -18,6 +19,7 @@
         <tr *ngFor=" let patient of patients">
           <td>{{patient.id}}</td>
           <td>{{patient.name}}</td>
+          <td>{{patient.gender}}</td>
           <td>{{patient.currentAge}} years</td>
           <td><button mat-raised-button color="primary" (click)="openMedicalRecord(patient.id)">Medical Record</button></td>
 
