--- a/FE/hospital-app/src/app/components/navigation-bar/navigation-bar.component.html
+++ b/FE/hospital-app/src/app/components/navigation-bar/navigation-bar.component.html
@@ -16,6 +16,19 @@
           <a routerLink="/patient"><span class="fa fa-user mr-3"></span> Patients</a>
         </li>
         <li *ngIf="role==='ROLE_DOCTOR'">
+          <mat-icon class="float-left mt-2">router</mat-icon>
+          <a><span class="fa fa-home mr-3"></span>Device data</a>
+        </li>
+        <li *ngIf="role==='ROLE_DOCTOR'">
+          <a routerLink="/blood-data"><span class="fa fa-user mr-5"></span> Blood device</a>
+        </li>
+        <li *ngIf="role==='ROLE_DOCTOR'">
+          <a routerLink="/heart-data"><span class="fa fa-user mr-5"></span> Heart device</a>
+        </li>
+        <li *ngIf="role==='ROLE_DOCTOR'">
+          <a routerLink="/neuro-data"><span class="fa fa-user mr-5"></span> Neurological device</a>
+        </li>
+        <li *ngIf="role==='ROLE_DOCTOR'">
           <mat-icon class="float-left mt-2"> alarm</mat-icon>
           <a routerLink="/alarms"><span class="fas fa-bell mr-3"></span> Alarms</a>
         </li>
