--- a/FE/hospital-app/src/app/components/devices/blood-data/blood-data.component.html
+++ b/FE/hospital-app/src/app/components/devices/blood-data/blood-data.component.html
@@ -3,7 +3,7 @@
     <app-navigation-bar></app-navigation-bar>
   </div>
   <div class="m-4 w-100">
-    <h1>Blood data panel</h1>
+    <h1>Blood device data </h1>
       <div style="min-height: 629px; max-height: 629px;">
         <table class="table table-hover text-center">
           <thead>
