--- a/FE/hospital-app/src/app/components/admin-panel/admin-panel.component.html
+++ b/FE/hospital-app/src/app/components/admin-panel/admin-panel.component.html
@@ -3,15 +3,18 @@
     <app-navigation-bar></app-navigation-bar>
   </div>
   <div class="mt-3 col-md-10">
-    <div class="pl-5 ml-3 text-right">
-      <img alt="You are certified!" title="You are certified!" *ngIf="certified" src="assets/images/shield.jpg" style="width: 70px; height: 70px;">
-      <img alt="You are not certified!" title="You are not certified!" *ngIf="!certified" src="assets/images/unsecure.png" style="width: 60px; height: 50px;">
+    <div class="col-md-12 row mb-5">
+      <div class="pl-3 col-md-6 float-left">
+        <h1>Home panel</h1>
+        <h4><i>- Active alarms -</i></h4>
+      </div>
+      <div class="text-right col-md-6 float-right">
+        <img alt="You are certified!" title="You are certified!" *ngIf="certified" src="assets/images/shield.jpg" style="width: 70px; height: 70px;">
+        <img alt="You are not certified!" title="You are not certified!" *ngIf="!certified" src="assets/images/unsecure.png" style="width: 60px; height: 50px;">
+      </div>
     </div>
-    <div class="pl-3">
-      <h1>Home panel</h1>
-    </div>
-    <div *ngFor="let m of messages">
-      {{m}}
+    <div class="col-md-12">
+      <app-alarm *ngFor="let m of messages" [message]="m"></app-alarm>
     </div>
   </div>
 </div>
