--- a/FE/hospital-app/src/app/components/devices/neuro-data/neuro-data.component.html
+++ b/FE/hospital-app/src/app/components/devices/neuro-data/neuro-data.component.html
@@ -5,6 +5,15 @@
   <div class="m-4 w-100">
     <h1>Neurological device data </h1>
     <div style="min-height: 629px; max-height: 629px;">
+      <div class="col-md-12 text-right">
+        <form class="example-form w-100" [formGroup]="filterForm" (ngSubmit)="filterByPatient()">
+          <mat-form-field class="col-md-5">
+            <mat-label>Patients ID</mat-label>
+            <input matInput type="number" id="patientID" name="patientID" formControlName="patientID" placeholder="Ex. 175">
+          </mat-form-field>
+          <button mat-raised-button color="primary">Filter</button>
+        </form>
+      </div>
       <table class="table table-hover text-center">
         <thead>
         <tr>
