--- a/FE/admin-fe/src/app/components/users/add-user/add-user.component.html
+++ b/FE/admin-fe/src/app/components/users/add-user/add-user.component.html
@@ -11,6 +11,7 @@
           <div *ngIf="addUserForm.controls['email'].invalid && addUserForm.controls['email'].touched" class="ml-1 mt-0 mb-0">
             <small *ngIf="addUserForm.controls['email'].errors?.required" class="text-danger">*This field is mandatory</small>
             <small *ngIf="addUserForm.controls['email'].errors?.email" class="text-danger">*Email form is not valid</small>
+            <small *ngIf="addUserForm.controls['email'].errors?.pattern" class="text-danger">*Wrong email format! Ex. johnDoe.gsmhospital@mailinator.com</small>
           </div>
         </div>
       </div>
@@ -18,9 +19,10 @@
         <div class="form-group col">
           <label for="firstName">First Name</label>
           <input type="text" id="firstName" class="form-control" name="firstName" formControlName="firstName" placeholder="Enter users first name">
-          <div style="height: 20px;">
+          <div style="height: 30px;">
             <div *ngIf="addUserForm.controls['firstName'].invalid && addUserForm.controls['firstName'].touched" class="ml-1 mt-0 mb-0">
               <small *ngIf="addUserForm.controls['firstName'].errors?.required" class="text-danger">*This field is mandatory</small>
+              <small *ngIf="addUserForm.controls['firstName'].errors?.pattern" class="text-danger">*First name must start with capital letter and contain only letters</small>
             </div>
           </div>
         </div>
@@ -30,6 +32,8 @@
           <div style="height: 20px;">
             <div *ngIf="addUserForm.controls['lastName'].invalid && addUserForm.controls['lastName'].touched" class="ml-1 mt-0 mb-0">
               <small *ngIf="addUserForm.controls['lastName'].errors?.required" class="text-danger">*This field is mandatory</small>
+              <small *ngIf="addUserForm.controls['lastName'].errors?.pattern" class="text-danger">*Last name must start with capital letter and contain only letters</small>
+
             </div>
           </div>
         </div>
