--- a/FE/admin-fe/src/app/components/admin-panel/admin-panel.component.html
+++ b/FE/admin-fe/src/app/components/admin-panel/admin-panel.component.html
@@ -1,8 +1,16 @@
 <div class="wrapper d-flex align-items-stretch">
-  <div style="height: 100vh;">
+  <div style="height: 100vh;" class="col-md-2 pl-0">
     <app-navigation-bar></app-navigation-bar>
   </div>
-  <div class="m-3">
-    <h1>Home panel</h1>
+  <div class="mt-3 col-md-10">
+    <div class="col-md-12 row mb-5">
+      <div class="pl-3 col-md-6 float-left">
+        <h1>Admin panel</h1>
+        <h4><i>- Active alarms -</i></h4>
+      </div>
+    </div>
+    <div class="col-md-12">
+      <app-alarm *ngFor="let m of messages" [message]="m"></app-alarm>
+    </div>
   </div>
 </div>
