templates for alarms FE

--- a/FE/hospital-app/src/app/components/navigation-bar/navigation-bar.component.html
+++ b/FE/hospital-app/src/app/components/navigation-bar/navigation-bar.component.html
@@ -32,6 +32,9 @@
           <mat-icon class="float-left mt-2"> alarm</mat-icon>
           <a routerLink="/alarms"><span class="fas fa-bell mr-3"></span> Alarms</a>
         </li>
+        <li>
+          <a routerLink="/create-alarms"><span class="fa fa-user mr-5"></span> Create alarm</a>
+        </li>
         <li class="mt-5" (click)="logout()" style="cursor:pointer;">
           <mat-icon class="float-left mt-2">close</mat-icon>
           <a ><span class="fa fa-sticky-note mr-3 mt-5"></span> Sign out</a>
