--- a/FE/hospital-app/src/app/components/alarm/alarm.component.html
+++ b/FE/hospital-app/src/app/components/alarm/alarm.component.html
@@ -1,5 +1,5 @@
 <div class="card mt-1" style="border:none;">
-  <div class="card-body text-white col-md-12 row" style="background-color: lightcoral; border-radius: 1rem;">
+  <div class="card-body text-white col-md-12 row ml-2" style="background-color: lightcoral; border-radius: 1rem;">
 <!--    dataType: "CRP"-->
 <!--    date: "2021-06-01T17:55:32.489+00:00"-->
 <!--    id: 18-->
