- Security rule alarms, websockets, finished rule implementation

--- a/FE/admin-fe/src/app/components/alarm/alarm.component.html
+++ b/FE/admin-fe/src/app/components/alarm/alarm.component.html
@@ -4,13 +4,13 @@
       {{message.date ? message.date.split("T")[0] : ''}} {{message.date ? message.date.split("T")[1].split(".")[0] : ''}}
     </div>
     <div class="col-md-3">
-<!--      {{message.dataType ? message.dataType : ''}}-->
+      {{message.ipAddress ? message.ipAddress : ''}}
     </div>
     <div class="col-md-3">
-<!--      [{{message.patientID ? message.patientID : ''}}] - {{message.patientsName ? message.patientsName : ''}}-->
+      {{message.id ? message.id : ''}}
     </div>
     <div class="col-md-3">
-<!--      {{message.value ? message.value : ''}}-->
+      {{message.alarmType ? message.alarmType : ''}}
     </div>
   </div>
 </div>
