Added form for creating custom alarms for logs

--- a/FE/admin-fe/src/app/components/navigation-bar/navigation-bar.component.html
+++ b/FE/admin-fe/src/app/components/navigation-bar/navigation-bar.component.html
@@ -42,6 +42,9 @@
         <li>
           <a routerLink="/hospital-logs"><span class="fa fa-user mr-5"></span> Hospital logs</a>
         </li>
+        <li>
+          <a routerLink="/create-alarm-for-logs"><span class="fa fa-user mr-5"></span> Create alarm for logs</a>
+        </li>
 
         <li>
           <mat-icon class="float-left mt-2">person</mat-icon>
