JWT Protection HOSPITAL-APP, Reports

--- a/FE/hospital-app/src/app/components/navigation-bar/navigation-bar.component.html
+++ b/FE/hospital-app/src/app/components/navigation-bar/navigation-bar.component.html
@@ -35,6 +35,10 @@
         <li>
           <a routerLink="/create-alarms"><span class="fa fa-user mr-5"></span> Create alarm</a>
         </li>
+        <li>
+          <mat-icon class="float-left mt-2"> show_chart</mat-icon>
+          <a routerLink="/reports"><span class="fas fa-bell mr-3"></span> Reports</a>
+        </li>
         <li class="mt-5" (click)="logout()" style="cursor:pointer;">
           <mat-icon class="float-left mt-2">close</mat-icon>
           <a ><span class="fa fa-sticky-note mr-3 mt-5"></span> Sign out</a>
